# shocovox

./: .gitignore  .todo  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  crash.txt
assets/models/: minecraft_arc.vox  minecraft_tree.vox  minecraft_tree_stem.vox  monu1.vox  navigate_x.vox  navigate_y.vox  navigate_z.vox  teapot.vox
assets/shaders/: bevy_viewport_render.wgsl  viewport_render.wgsl
benches/: performance.rs
doc/: bevy_plugin_data_flow.graphml  bevy_plugin_resolution_change_dataflow.graphml
examples/: beach.rs  bevy_wgpu_render.rs  cpu_render.rs  dot_cube.rs  minecraft.rs  simple.rs  sponza.rs  wgpu_render.rs
src/: lib.rs  object_pool.rs  octree.rs  spatial.rs
src/convert/: bytecode.rs  bytecode_tests.rs  magicavoxel.rs  mod.rs  serde.rs  tests.rs
src/octree/: bevy_wgpu_octree.rs  bytecode.rs  detail.rs  mipmap.rs  mod.rs  node.rs  raytracing.rs  tests.rs  types.rs  update.rs
src/octree/convert/: bytecode.rs  bytecode_tests.rs  magicavoxel.rs  mod.rs  serde.rs  tests.rs
src/octree/raytracing/: classic_raytracing_on_bevy_wgpu.rs  mod.rs  raytracing_on_cpu.rs  tests.rs  types.rs
src/octree/raytracing/bevy/: cache.rs  data.rs  mod.rs  pipeline.rs  types.rs
src/octree/raytracing/wgpu/: data.rs  mod.rs  pipeline.rs  raytracing.wgsl  render.rs  rendering.wgsl  types.rs
src/octree/update/: clear.rs  insert.rs  mipmap.rs  mod.rs  tests.rs
src/raytracing/: raytracing_on_cpu.rs  tests.rs
src/raytracing/bevy/: cache.rs  data.rs  mod.rs  pipeline.rs  types.rs
src/spatial/: lut.rs  math.rs  mod.rs  raytracing.rs  tests.rs
src/spatial/math/: mod.rs  tests.rs  vector.rs
src/spatial/raytracing/: lut.rs  mod.rs  tests.rs
