[package]
name = "shocovox-rs"
version = "0.3.1"
edition = "2021"
authors = ["Dávid Tóth <toth.david.munka@gmail.com>"]
license = "MIT OR Apache-2.0"

[features]
default = []
raytracing = ["dep:image", "dep:show-image"]
serialization = ["dep:serde"]
bevy_wgpu = ["raytracing", "dep:bevy", "dep:encase"]

[dependencies]
serde = { version = "1.0.183", features = ["derive"], optional = true }
bendy = { git = "https://github.com/davids91/bendy.git" , features = ["std", "serde"]}
array-init = "2.1.0"
encase = { version = "0.9.0", optional = true }
# for example cpu_render
image = { version = "0.25.1", optional = true }
show-image = { version = "0.14.0", optional = true }

# for example bevy_wgpu
bevy = { version = "0.13.2", features = ["dynamic_linking"], optional = true}

# debugging
#linker = "/usr/bin/clang"
#rustflags = ["-Clink-arg=-fuse-ld=lld", "-Clink-arg=-Wl,--no-rosegment"]
#[profile.release] # for flamegraph
#debug = true

[dev-dependencies]
#lldb = "0.0.11" to enable debugging support
# maybe try lldb-sys?!
rand = "0.8.5"
criterion = { version = "0.4", features = ["html_reports"] }

[[bench]]
name = "performance"
harness = false
