[package]
name = "shocovox-rs"
version = "0.12.0"
edition = "2021"
authors = ["Dávid Tóth <toth.david.munka@gmail.com>"]
license = "MIT OR Apache-2.0"

[features]
default = ["bevy_wgpu","bytecode", "dot_vox_support"]
raytracing = ["dep:image", "dep:show-image"]
bytecode = ["dep:bendy"]
serialization = ["dep:serde"]
dot_vox_support = ["dep:dot_vox", "dep:nalgebra", "dep:bendy"]
bevy_wgpu = ["raytracing", "dep:bevy", "dep:crossbeam", "dep:bimap", "dep:bevy_panorbit_camera", "dep:iyes_perf_ui"]

[dependencies]
num-traits = "0.2.19"
serde = { version = "1.0.217", features = ["derive"], optional = true }
bendy = { git = "https://github.com/P3KI/bendy.git" , features = ["std", "serde"], optional = true }
dot_vox = { version = "5.1.1", optional = true }
nalgebra = { version = "0.33.0", optional = true }
crossbeam = { version = "0.8.4", optional = true }
bimap = { version = "0.6.3", optional = true }

# for example cpu_render
image = { version = "0.25.1", optional = true }
show-image = { version = "0.14.0", optional = true }

# for example bevy_wgpu
bevy = { version = "0.15.1", features = ["wayland"], optional = true}
#iyes_perf_ui = { version = "0.3.0", features = [], optional = true}
iyes_perf_ui = { git = "https://github.com/IyesGames/iyes_perf_ui.git", features = [], optional = true}
bevy_panorbit_camera = { version = "0.21.1", features = [], optional = true}


# debugging
#linker = "/usr/bin/clang"
#rustflags = ["-Clink-arg=-fuse-ld=lld", "-Clink-arg=-Wl,--no-rosegment"]
#[profile.release] # for flamegraph
#debug = true

[dev-dependencies]
#lldb = "0.0.11" to enable debugging support
# maybe try lldb-sys?!
rand = "0.8.5"
criterion = { version = "0.4", features = ["html_reports"] }

[[bench]]
name = "performance"
harness = false
